Fixed spacing of countdown on full screen

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -540,12 +540,13 @@ label + input[type=radio] + label {
 	justify-content: center;
 	flex-direction: column;
     line-height: 30px;
-	margin: 10px;
+	/* margin: 10px; */
     padding-top: 10px;
 	position: relative;
 	width: 100px;
 	height: 100px;
     font-family: 'Lato', sans-serif;
+    text-align:center;
 }
 
 .countdown-item span {
@@ -558,7 +559,7 @@ label + input[type=radio] + label {
 .countdown-svg {
 	position: absolute;
 	top: 0;
-	left: 10px;
+	left: 0;
 	width: 100px;
 	height: 100px;
 }
